src/Assets/css/styles.css
/* ... */
.question {
    font-weight: 500;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: auto;
}
.chevron-down {
    color: var(--_clr-white);
    background-color: rgb(51, 53, 77, 0.7);
    padding: .7rem .8rem;
    border: 0;
    border-radius: 30px;
    transition: 0.3s;
}
.chevron-down.open {
    color: var(--_clr-white);
    background-color: var(--_clr-primary);
    padding: .7rem .8rem;
    border: 0;
    border-radius: 30px;
    transform: rotate(180deg);
}
.faqs:hover {
    background-color: var(--_clr-quoteshover);
}
.answer {
    padding-top: 0;
    transition: 0.3s;  
}
.answer.open {
    padding: 1rem 0;
}
.q-text-arrow {
    padding-right: none;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.q-answer {
    font-weight: 100;
    padding-top: 1rem;
    padding-bottom: 10px;
}
.arrow-up {
    background: rgba(102, 99, 241, 0.8);
    border-radius: 20px;
}
.bottom-of-page-6 {
    margin-top: 5rem;
    padding: 4rem 2rem;
    display: flex;
    gap:10rem;
    border: none;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    background-color: var(--_clr-subscribe);
    grid-area: bottom;
}
.sub-bell {
    display: flex;
    align-items: center;
    gap: 2rem;
}
.sub-text {
    font-size: 1.4rem;
    font-weight: 900;
    max-width: 26rem;
}
.sub-form {
    display: flex;
    position: relative;
}
.sub-img {
    position: absolute;
    top: 50%;
    left: 0.5rem;

    transform: translateY(-50%);
}
.input-email {
    color: var(--_clr-text);
    background-color: var(--_clr-background);
    height: 2.75rem;
    width: 20rem;
    border: solid 1px rgba(255, 255, 255, 0.5);
    padding-left: 2rem;
    border-right: none;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.btn-sub {
    font-size: 1rem;
    font-size: large;
    color: var(--_clr-white);
    background-color: var(--_clr-primary);
    border: none;
    cursor: pointer;
    padding: 0.2rem 3rem;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.btn-sub:hover {
    background-color: #7573f1;
}
.tothetop {
    margin-top: 3rem;
    margin-bottom: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 100;
    font-size: 12px;
}
.my-mark {
    padding-top: 1rem;
    padding-bottom: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 100;
    font-size: 12px;
}

/* CSS for the Contact Page */

.contactPage {
    max-width: 1920px;
    width: 1296px;
    margin: auto;
    display: grid; 
    padding-top: 2rem;
    padding-bottom: 5rem;
    grid-template-columns: 1fr 1fr;
}
.pageNavigation {
    display: flex;
    align-items: center;
    gap: 1rem;
    margin-top: 1rem;
    margin-bottom: 3rem;

}
.home {
    display: flex;
    align-items: center;
    gap: 7px;
}
.navHeadline {
    font-size: 2rem;
    font-weight: 900;
    margin-bottom: 2rem;
}
.details-container {
    display: flex;
    flex-direction: column;
    gap: 3rem;
}
.details {
    display: flex;
    gap: 1rem;
}
.details-text {
    display: flex;
    flex-direction: column;
    gap: 1rem;

}
.details-envelope {
    color: var(--_clr-primary);
    background: white;
    display: inline-block;
    max-width: 3rem;
    max-height: 2.4rem;
    padding: .5rem .7rem;
    border-radius: 30px;
}
.details-icon {
    color: var(--_clr-primary);
    background: white;
    display: inline-block;
    max-width: 3rem;
    max-height: 2.4rem;
    padding: .5rem .6rem;
    border-radius: 30px;
}
.contact-btn {
    color: var(--_clr-primary);
    display: flex;
    align-items: center;
    gap: 0.3rem;
}
.contact-btn:hover {
    color: rgb(102, 99, 241, .7);
}  
.consultForm {
    margin: 6rem auto;
    color: black;
    background-color: var(--_clr-form);
    width: 636px;
    height: 718px;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 10px;
    box-shadow: 0 3px rgba(0, 0, 0, 0.2);
}
.conHeadline {
    font-size: 1.2rem;
    padding-top: 6rem;
}
.conInputs {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}
.inputFullName {
    font-size: 1.2rem;
    width: 491px;
    height: 52px;
    border-radius: 10px;
}
.inputEmail {
    font-size: 1.2rem;
    width: 491px;
    height: 52px;
    border-radius: 10px;
}
.specialist {
    font-size: 1.2rem;
    width: 491px;
    height: 52px;
    border-radius: 10px;
}
.consult-btn {
    margin-top: 10rem;
    color: white;
    background-color: var(--_clr-primary);
    border: none;
    font-size: 1.2rem;
    width: 491px;
    height: 52px;
    border-radius: 10px;
    cursor: pointer;
}
.consult-btn:hover {
    background-color: rgb(102, 99, 241, .7);
}
.navBottomRight {
    margin: auto;
}
.medical {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 1rem;
}
.medical-fillers {
    display: flex;
    gap: 7px;
}
.medIcon {
    color: var(--_clr-primary)
}
.days {
    display:flex;
    gap: 7px
}
.nine-ten {
    font-weight: 200;
}
.social-media {
    display: flex;
    max-width: 244px;
}
.social-icons {
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    background-color: var(--_clr-contact);
    width: 2.7rem;
    height: 2.7rem;
}
.social-icons:hover {
    background-color: var(--_clr-contacthover);
}
/* #rickrolled {
    background-color: #0B0F19;
} */

